--- a/solutions/w10d04-code-test/index.html
+++ b/solutions/w10d04-code-test/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Fundraising Campaign</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
     <script src="js/app.js" charset="utf-8"></script>
   </head>
   <body>
